feat(backend): add RequirePrivateKey to certificate entity
